@@ -23,6 +23,7 @@
 	added docs for authentication, query translation, query filter and
 		result set translation modules
 	added -fPIC to sqlrserver-config --cflags, if supported
+	the "default" auth module is now called "userlist"
 
 0.60 - fixed true->false transposition in sqlrservercontroller::interceptQuery
 		that could lead to a reLogIn loop
